--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar">
+  <nav class="navbar navbar-expand-md navbar-dark m top navbar">
     <div class="container">
       <a class="navbar-brand" href="{{BASE}}index.html">
         <img
