--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,102 +1,124 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-auto mb-4">
-        <h4>Company</h4>
-        <ul class="footer-nav">
-          <li class="footer-link"><a href="{{BASE}}pages/sobre.html">Sobre</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/empregos.html">Empregos</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/imprensa.html">Imprensa</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/novidades.html">Novidades</a></li>
+      <div class="col-lg-auto mb-4">
+        <h4>Produto</h4>
+        <ul class="navbar-nav">
+          <li class="footer-link">
+            <a href="{{BASE}}pages/premium.html">Premium</a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 col-lg-auto mb-4">
-        <h4>Comunidades</h4>
-        <ul class="footer-nav">
-          <li class="footer-link"><a href="{{BASE}}pages/artistas.html">Para Artistas</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/desenvolvedores.html">Desenvolvedores</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/marcas.html">Marcas</a></li>
+      <div class="col-lg-auto mb-4">
+        <h4>Suporte</h4>
+        <ul class="navbar-nav">
+          <li class="footer-link">
+            <a href="{{BASE}}pages/ajuda.html">Central de Ajuda</a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 col-lg-auto mb-4">
-        <h4>Links úteis</h4>
-        <ul class="footer-nav">
-          <li class="footer-link"><a href="{{BASE}}pages/ajuda.html">Ajuda</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/player.html">Player</a></li>
-          <li class="footer-link"><a href="{{BASE}}pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
+      <div class="col-lg-auto mb-4">
+        <h4>Links Úteis</h4>
+        <ul class="navbar-nav">
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/.html"></a>
+          </li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 col-lg-auto mb-4">
-        <h4>Site feito com</h4>
+      <div class="col-lg-auto mb-4">
+        <h4>Tecnologias:</h4>
         <ul id="media">
           <li>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg"
-              class="devicon-img"
+              class="espaco devicon-img"
               alt="HTML5"
-            >
+            />
           </li>
           <li>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg"
-              class="devicon-img"
+              class="espaco devicon-img"
               alt="CSS3"
-            >
+            />
           </li>
           <li>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
-              class="devicon-img"
+              class="espaco devicon-img"
               alt="JavaScript"
-            >
+            />
           </li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 col-lg-auto mb-4">
-        <h4>Site feito por</h4>
-        <ul class="footer-nav">
+      <div class="col-lg-auto mb-4">
+        <h4>Projeto por:</h4>
+        <ul class="navbar-nav">
           <li>
             <a
               href="https://github.com/Domisnnet/"
               target="_blank"
+              class="navbar-link externo"
               id="dev"
-              class="externo"
             >
               DomisDev
             </a>
           </li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 col-lg-auto mb-4 ml-lg-auto">
-        <h4>Redes sociais</h4>
+      <div class="col-lg-auto mb-4 ml-lg-auto">
+        <h4>Contato & Perfil</h4>
         <ul class="social-media-icons">
           <li>
-            <a href="#" aria-label="Facebook">
-              <img src="{{BASE}}src/imagens/facebook.png" class="social-icon" alt="Facebook">
+            <a
+              href="https://www.linkedin.com/in/dominique-marcelino-gon%C3%A7alves-09b871331/"
+            >
+              <i class="fab fa-linkedin-in social-icon"></i>
             </a>
           </li>
           <li>
-            <a href="#" aria-label="Twitter">
-              <img src="{{BASE}}src/imagens/twitter.png" class="social-icon" alt="Twitter">
+            <a
+              href="mailto:dominique.goncalves61@gmail.com"
+              aria-label="E-mail"
+            >
+              <i class="fas fa-envelope social-icon"></i>
             </a>
           </li>
-          <li>
-            <a href="#" aria-label="Instagram">
-              <img src="{{BASE}}src/imagens/instagram.png" class="social-icon" alt="Instagram">
-            </a>
-          </li>
+          <li></li>
         </ul>
       </div>
     </div>
-    <div class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center">
+    <div
+      class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center"
+    >
       <ul class="list-inline mb-0">
-        <li class="list-inline-item"><a href="{{BASE}}pages/central.html">Central</a></li>
+        <li class="list-inline-item">
+          <a href="{{BASE}}pages/privacidade-termos.html"
+            >Privacidade & Termos</a
+          >
+        </li>
       </ul>
       <p class="text-muted mb-0">
-        &copy; 2025 KingDomfy — Todos os direitos reservados
+        &copy; 2025 KingDomfy - Projeto conceitual desenvolvido por DomisDev.
       </p>
     </div>
   </div>
 </footer>
-<script src="{{BASE}}vendor/fontawesome/js/all.min.js"></script>
-<script src="{{BASE}}vendor/fontawesome/js/v4-shims.min.js"></script>
