--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,10 +8,30 @@
             <a href="{{BASE}}pages/premium.html">Premium</a>
           </li>
           <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
+            <a href="{{BASE}}pages/player.html">Player</a>
           </li>
           <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
+            <a href="{{BASE}}pages/artistas.html">Artistas</a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/novidades.html">Novidades</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-auto mb-4">
+        <h4>Empresa</h4>
+        <ul class="navbar-nav">
+          <li class="footer-link">
+            <a href="{{BASE}}pages/sobre.html">Sobre</a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/empregos.html">Empregos</a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/imprensa.html">Imprensa</a>
+          </li>
+          <li class="footer-link">
+            <a href="{{BASE}}pages/marcas.html">Marcas</a>
           </li>
         </ul>
       </div>
@@ -22,29 +42,15 @@
             <a href="{{BASE}}pages/ajuda.html">Central de Ajuda</a>
           </li>
           <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
+            <a href="{{BASE}}pages/suporte.html">Suporte</a>
           </li>
           <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
+            <a href="{{BASE}}pages/desenvolvedores.html">Desenvolvedores</a>
           </li>
         </ul>
       </div>
       <div class="col-lg-auto mb-4">
-        <h4>Links Úteis</h4>
-        <ul class="navbar-nav">
-          <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
-          </li>
-          <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
-          </li>
-          <li class="footer-link">
-            <a href="{{BASE}}pages/.html"></a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-lg-auto mb-4">
-        <h4>Tecnologias:</h4>
+        <h4>Tecnologias</h4>
         <ul id="media">
           <li>
             <img
@@ -70,7 +76,7 @@
         </ul>
       </div>
       <div class="col-lg-auto mb-4">
-        <h4>Projeto por:</h4>
+        <h4>Projeto por</h4>
         <ul class="navbar-nav">
           <li>
             <a
@@ -90,6 +96,7 @@
           <li>
             <a
               href="https://www.linkedin.com/in/dominique-marcelino-gon%C3%A7alves-09b871331/"
+              aria-label="LinkedIn"
             >
               <i class="fab fa-linkedin-in social-icon"></i>
             </a>
@@ -102,22 +109,20 @@
               <i class="fas fa-envelope social-icon"></i>
             </a>
           </li>
-          <li></li>
         </ul>
       </div>
     </div>
-    <div
-      class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center"
-    >
-      <ul class="list-inline mb-0">
+    <div class="footer-bottom mt-4 pt-4 border-top d-flex flex-column flex-md-row justify-content-between align-items-center">
+      <ul class="list-inline mb-2 mb-md-0">
         <li class="list-inline-item">
-          <a href="{{BASE}}pages/privacidade-termos.html"
-            >Privacidade & Termos</a
+          <a
+            href="{{BASE}}pages/privacidade-termos.html">
+            Privacidade & Termos</a
           >
         </li>
       </ul>
       <p class="text-muted mb-0">
-        &copy; 2025 KingDomfy - Projeto conceitual desenvolvido por DomisDev.
+        &copy; 2025 KingDomfy — Projeto conceitual desenvolvido por DomisDev.
       </p>
     </div>
   </div>
